--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "chip-8"
+name = "chippy"
+description = "A Chip-8 emulator in Rust"
 version = "0.1.0"
 authors = ["Pierre Wacrenier <pierre@wacrenier.me>"]
 edition = "2018"
