--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ branches:
 install:
     - |
         if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-           brew install sdl2 sdl2_gfx sdl2_mixer sdl2_image sdl2_ttf
+            brew update
+            brew install sdl2 sdl2_gfx sdl2_mixer sdl2_image sdl2_ttf
         else
             sudo apt update
             sudo apt install -y libsdl2-dev libsdl2-mixer-dev libsdl2-image-dev libsdl2-gfx-dev libsdl2-ttf-dev
