--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,11 @@ version = "0.1.0"
 authors = ["Pierre Wacrenier <pierre@wacrenier.me>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 sdl2 = "~0.32"
 clap = "~2.27.0"
 hexdump = "*"
+rand = "*"
 
 [dev-dependencies]
 tempfile = "*"
