--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ install:
             sudo apt install -y libsdl2-dev libsdl2-mixer-dev libsdl2-image-dev libsdl2-gfx-dev libsdl2-ttf-dev
         fi
 script:
-    - cargo test
+    - cargo test --bin crust
+    - cargo test --bin disassembler
